[gd_scene load_steps=16 format=2]

[ext_resource path="res://NEAT_usability/fonts/dynamics/roboto-regular.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/tiles/maintileset.tres" type="TileSet" id=2]
[ext_resource path="res://assets/tiles/lavatiles.tres" type="TileSet" id=3]
[ext_resource path="res://assets/tiles/speedtile.tres" type="TileSet" id=4]
[ext_resource path="res://src/levels/testlv.gd" type="Script" id=5]
[ext_resource path="res://assets/images/background.png" type="Texture" id=6]
[ext_resource path="res://src/objects/coin.tscn" type="PackedScene" id=7]
[ext_resource path="res://joystick/virtual_joystick.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/objects/counter.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/actors/player.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/objects/portal.tscn" type="PackedScene" id=11]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 582.191, 141.336 )

[sub_resource type="CircleShape2D" id=4]
radius = 113.783

[node name="testlv" type="Node2D"]
script = ExtResource( 5 )

[node name="coin" parent="." instance=ExtResource( 7 )]
position = Vector2( 1350.86, 683.438 )

[node name="portal" parent="." instance=ExtResource( 11 )]
position = Vector2( 9834.81, 515.86 )

[node name="background" type="CanvasLayer" parent="."]
layer = -100

[node name="Background" type="TextureRect" parent="background"]
modulate = Color( 0.780392, 0.545098, 0.545098, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )

[node name="counter" parent="background" instance=ExtResource( 9 )]

[node name="MENUB" type="TouchScreenButton" parent="background"]
position = Vector2( 91.5703, 42.4264 )
scale = Vector2( 2.4, 1.04 )
shape = SubResource( 1 )

[node name="Label" type="Label" parent="background/MENUB"]
margin_left = -0.294622
margin_top = -1.14441e-05
margin_right = 39.7054
margin_bottom = 19.0
rect_scale = Vector2( 0.516666, 1 )
custom_fonts/font = ExtResource( 1 )
text = "menu"

[node name="RestartB" type="TouchScreenButton" parent="background"]
position = Vector2( 162.281, 42.0729 )
scale = Vector2( 2.12, 1 )
shape = SubResource( 2 )

[node name="Label2" type="Label" parent="background/RestartB"]
margin_left = -0.333534
margin_top = 1.41422
margin_right = 39.6665
margin_bottom = 20.4142
rect_scale = Vector2( 0.516666, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Restart"

[node name="Label" type="Label" parent="background"]
margin_left = 703.0
margin_top = 28.0
margin_right = 806.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 1 )
text = "Gravity : "
uppercase = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Virtual joystick" parent="UI" instance=ExtResource( 8 )]
anchor_left = 1.0
anchor_right = 1.069
margin_left = -225.636
margin_top = -209.35
margin_right = -84.2922
margin_bottom = -9.34961
rect_scale = Vector2( 1.2743, 1.26329 )
deadzone_size = 11.0
joystick_mode = 1
visibility_mode = 1
action_left = "move_left"
action_right = "move_right"
action_up = "jump"

[node name="Virtual joystick2" parent="UI" instance=ExtResource( 8 )]
margin_left = 84.1322
margin_top = -196.825
margin_right = 284.132
margin_bottom = 3.1748
rect_scale = Vector2( 1.24, 1.11949 )
joystick_mode = 1
visibility_mode = 1
action_left = "move_left"
action_right = "move_right"
action_up = "jump"

[node name="Start" type="Position2D" parent="."]
position = Vector2( 239.512, 720.891 )

[node name="PlayerStart" type="Position2D" parent="."]
position = Vector2( 114.362, 721.489 )

[node name="Label" type="Label" parent="PlayerStart"]
margin_left = 2370.43
margin_top = 387.53
margin_right = 2561.43
margin_bottom = 406.53
custom_fonts/font = ExtResource( 1 )
text = "YUP LAVA DOES NOTHING"

[node name="ENDR" type="Position2D" parent="."]
position = Vector2( 1809.04, 392.494 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 0, 0, 77, -1073741824, 0, 78, -1073741824, 0, 79, -1073741824, 0, 80, -1073741824, 0, 81, -1073741824, 0, 82, -1073741824, 0, 83, -1073741824, 0, 84, -1073741824, 0, 85, -1073741824, 0, 86, -1073741824, 0, 87, -1073741824, 0, 88, -1073741824, 0, 89, -1073741824, 0, 90, -1073741824, 0, 91, -1073741824, 0, 92, -1073741824, 0, 93, -1073741824, 0, 94, -1073741824, 0, 95, -1073741824, 0, 96, -1073741824, 0, 97, -1073741824, 0, 98, -1073741824, 0, 99, -1073741824, 0, 100, -1073741824, 0, 101, -1073741824, 0, 102, -1073741824, 0, 103, -1073741824, 0, 104, -1073741824, 0, 105, -1073741824, 0, 106, -1073741824, 0, 107, -1073741824, 0, 108, -1073741824, 0, 109, -1073741824, 0, 110, -1073741824, 0, 111, -1073741824, 0, 112, -1073741824, 0, 113, -1073741824, 0, 114, -1073741824, 0, 115, -1073741824, 0, 116, -1073741824, 0, 117, -1073741824, 0, 118, -1073741824, 0, 119, -1073741824, 0, 120, -1073741824, 0, 121, -1073741824, 0, 122, -1073741824, 0, 123, -1073741824, 0, 124, -1073741824, 0, 125, -1073741824, 0, 126, -1073741824, 0, 127, -1073741824, 0, 128, -1073741824, 0, 129, -1073741824, 0, 130, -1073741824, 0, 131, -1073741824, 0, 132, -1073741824, 0, 133, -1073741824, 0, 134, -1073741824, 0, 135, -1073741824, 0, 136, -1073741824, 0, 137, -1073741824, 0, 138, -1073741824, 0, 139, -1073741824, 0, 65536, 0, 0, 65613, -1073741824, 0, 65676, -1073741824, 0, 65677, -1073741824, 0, 65678, -1073741824, 0, 65679, -1073741824, 0, 65680, -1073741824, 0, 65681, -1073741824, 0, 65682, -1073741824, 0, 65683, -1073741824, 0, 65684, -1073741824, 0, 65685, -1073741824, 0, 65686, -1073741824, 0, 65687, -1073741824, 0, 65688, -1073741824, 0, 65689, -1073741824, 0, 65690, -1073741824, 0, 65691, -1073741824, 0, 65692, -1073741824, 0, 65693, -1073741824, 0, 65694, -1073741824, 0, 65695, -1073741824, 0, 65696, -1073741824, 0, 65697, -1073741824, 0, 65698, -1073741824, 0, 65699, -1073741824, 0, 65700, -1073741824, 0, 65701, -1073741824, 0, 65702, -1073741824, 0, 65703, -1073741824, 0, 65704, -1073741824, 0, 65705, -1073741824, 0, 65706, -1073741824, 0, 65707, -1073741824, 0, 65708, -1073741824, 0, 65709, -1073741824, 0, 65710, -1073741824, 0, 65711, -1073741824, 0, 65712, -1073741824, 0, 65713, -1073741824, 0, 65714, -1073741824, 0, 65715, -1073741824, 0, 65716, -1073741824, 0, 65717, -1073741824, 0, 65718, -1073741824, 0, 65719, -1073741824, 0, 65720, -1073741824, 0, 65721, -1073741824, 0, 65722, -1073741824, 0, 65723, -1073741824, 0, 65724, -1073741824, 0, 65725, -1073741824, 0, 65726, -1073741824, 0, 65727, -1073741824, 0, 65728, -1073741824, 0, 65729, -1073741824, 0, 65730, -1073741824, 0, 65731, -1073741824, 0, 65732, -1073741824, 0, 65733, -1073741824, 0, 65734, -1073741824, 0, 65735, -1073741824, 0, 65736, -1073741824, 0, 65737, -1073741824, 0, 65738, -1073741824, 0, 65739, -1073741824, 0, 65740, -1073741824, 0, 65741, -1073741824, 0, 65742, -1073741824, 0, 65743, -1073741824, 0, 65744, -1073741824, 0, 65745, -1073741824, 0, 65746, -1073741824, 0, 65747, -1073741824, 0, 65748, -1073741824, 0, 65749, -1073741824, 0, 65750, -1073741824, 0, 65751, -1073741824, 0, 65752, -1073741824, 0, 65753, -1073741824, 0, 65754, -1073741824, 0, 65755, -1073741824, 0, 65756, -1073741824, 0, 65757, -1073741824, 0, 65758, -1073741824, 0, 65759, -1073741824, 0, 65760, -1073741824, 0, 65761, -1073741824, 0, 65762, -1073741824, 0, 65763, -1073741824, 0, 65764, -1073741824, 0, 65765, -1073741824, 0, 65766, -1073741824, 0, 65767, -1073741824, 0, 65768, -1073741824, 0, 65769, -1073741824, 0, 65770, -1073741824, 0, 65771, -1073741824, 0, 65772, -1073741824, 0, 65773, -1073741824, 0, 65774, -1073741824, 0, 65775, -1073741824, 0, 65776, -1073741824, 0, 65777, -1073741824, 0, 65778, -1073741824, 0, 65779, -1073741824, 0, 65780, -1073741824, 0, 65781, -1073741824, 0, 65782, -1073741824, 0, 65783, -1073741824, 0, 65784, -1073741824, 0, 65785, -1073741824, 0, 65786, -1073741824, 0, 65787, -1073741824, 0, 65788, -1073741824, 0, 65789, -1073741824, 0, 65790, -1073741824, 0, 65791, -1073741824, 0, 65792, -1073741824, 0, 65793, -1073741824, 0, 65794, -1073741824, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 0, 0, 131098, 0, 0, 131099, 0, 0, 131100, 0, 0, 131101, 0, 0, 131102, 0, 0, 131103, 0, 0, 131104, 0, 0, 131105, 0, 0, 131106, 0, 0, 131107, 0, 0, 131108, 0, 0, 131109, 0, 0, 131110, 0, 0, 131111, 0, 0, 131112, 0, 0, 131113, 0, 0, 131114, 0, 0, 131115, 0, 0, 131116, 0, 0, 131117, 0, 0, 131118, 0, 0, 131119, 0, 0, 131120, 0, 0, 131121, 0, 0, 131122, 0, 0, 131123, 0, 0, 131124, 0, 0, 131125, 0, 0, 131126, 0, 0, 131127, 0, 0, 131128, 0, 0, 131129, 0, 0, 131130, 0, 0, 131131, 0, 0, 131132, 0, 0, 131133, 0, 0, 131134, 0, 0, 131135, 0, 0, 131136, 0, 0, 131137, 0, 0, 131138, 0, 0, 131139, 0, 0, 131140, 0, 0, 131141, 0, 0, 131142, 0, 0, 131143, 0, 0, 131144, 0, 0, 131145, 0, 0, 131146, 0, 0, 131147, 0, 0, 131148, 0, 0, 131330, -1073741824, 0, 196608, 0, 0, 196866, -1073741824, 0, 262144, 0, 0, 262402, -1073741824, 0, 327680, 0, 0, 327938, -1073741824, 0, 393216, 0, 0, 393474, -1073741824, 0, 458752, 0, 0, 458785, 0, 0, 458786, 0, 0, 458791, 0, 0, 458792, 0, 0, 459010, -1073741824, 0, 524288, 0, 0, 524320, 0, 0, 524321, 0, 0, 524546, -1073741824, 0, 589824, 0, 0, 589855, 0, 0, 589856, 0, 0, 589865, 0, 0, 589866, 0, 0, 590082, -1073741824, 0, 655360, 0, 0, 655390, 0, 0, 655391, 0, 0, 655402, 0, 0, 655403, 0, 0, 655618, -1073741824, 0, 720896, 0, 0, 720925, 0, 0, 720926, 0, 0, 720939, 0, 0, 720940, 0, 0, 721154, -1073741824, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 786460, 0, 0, 786461, 0, 0, 786476, 0, 0, 786477, 0, 0, 786480, 7, 0, 786481, 7, 0, 786482, 7, 0, 786483, 7, 0, 786484, 7, 0, 786485, 7, 0, 786486, 7, 0, 786487, 7, 0, 786488, 7, 0, 786489, 7, 0, 786490, 7, 0, 786491, 7, 0, 786492, 7, 0, 786493, 7, 0, 786494, 7, 0, 786495, 7, 0, 786496, 7, 0, 786497, 7, 0, 786498, 7, 0, 786499, 7, 0, 786500, 7, 0, 786501, 7, 0, 786502, 7, 0, 786690, -1073741824, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 851993, 0, 0, 851994, 0, 0, 851995, 0, 0, 851996, 0, 0, 851997, 0, 0, 851998, 0, 0, 852012, 0, 0, 852013, 0, 0, 852014, 0, 0, 852015, 7, 0, 852038, 7, 0, 852226, -1073741824, 0, 917535, 0, 0, 917536, 0, 0, 917551, 0, 0, 917574, 7, 0, 917762, -1073741824, 0, 983072, 0, 0, 983073, 0, 0, 983087, 0, 0, 983110, 7, 0, 983298, -1073741824, 0, 1048609, 0, 0, 1048623, 0, 0, 1048646, 7, 0, 1048834, -1073741824, 0, 1114145, 0, 0, 1114146, 0, 0, 1114147, 0, 0, 1114159, 0, 0, 1114370, -1073741824, 0, 1179683, 0, 0, 1179684, 0, 0, 1179685, 0, 0, 1179695, 0, 0, 1179906, -1073741824, 0, 1245221, 0, 0, 1245222, 0, 0, 1245223, 0, 0, 1245442, -1073741824, 0, 1310759, 0, 0, 1310760, 0, 0, 1310761, 0, 0, 1310762, 0, 0, 1310978, -1073741824, 0, 1376298, 0, 0, 1376299, 0, 0, 1376300, 0, 0, 1376301, 0, 0, 1376302, 0, 0, 1376303, 0, 0, 1376514, -1073741824, 0, 1441839, 0, 0, 1442050, -1073741824, 0, 1507375, 0, 0, 1507585, -1073741824, 0, 1507586, -1073741824, 0, 1572911, 0, 0, 1573121, -1073741824, 0, 1638447, 0, 0, 1638657, -1073741824, 0, 1703983, 0, 0, 1704192, -1073741824, 0, 1704193, -1073741824, 0, 1769519, 0, 0, 1769728, -1073741824, 0, 1835055, 0, 0, 1835264, -1073741824, 0, 1900591, 0, 0, 1900592, 0, 0, 1900593, 0, 0, 1900594, 0, 0, 1900595, 0, 0, 1900596, 0, 0, 1900597, 0, 0, 1900598, 0, 0, 1900599, 0, 0, 1900600, 0, 0, 1900601, 0, 0, 1900602, 0, 0, 1900603, 0, 0, 1900604, 0, 0, 1900605, 0, 0, 1900606, 0, 0, 1900607, 0, 0, 1900608, 0, 0, 1900609, 0, 0, 1900610, 0, 0, 1900611, 0, 0, 1900612, 0, 0, 1900613, 0, 0, 1900614, 0, 0, 1900615, 7, 0, 1900616, 7, 0, 1900617, -1073741824, 0, 1900618, -1073741824, 0, 1900619, -1073741824, 0, 1900620, -1073741824, 0, 1900621, -1073741824, 0, 1900622, -1073741824, 0, 1900623, -1073741824, 0, 1900624, -1073741824, 0, 1900625, -1073741824, 0, 1900626, -1073741824, 0, 1900627, -1073741824, 0, 1900628, -1073741824, 0, 1900629, -1073741824, 0, 1900630, -1073741824, 0, 1900631, -1073741824, 0, 1900632, -1073741824, 0, 1900633, -1073741824, 0, 1900634, -1073741824, 0, 1900635, -1073741824, 0, 1900636, -1073741824, 0, 1900637, -1073741824, 0, 1900638, -1073741824, 0, 1900639, -1073741824, 0, 1900640, -1073741824, 0, 1900641, -1073741824, 0, 1900642, -1073741824, 0, 1900643, -1073741824, 0, 1900644, -1073741824, 0, 1900645, -1073741824, 0, 1900646, -1073741824, 0, 1900647, -1073741824, 0, 1900648, -1073741824, 0, 1900649, -1073741824, 0, 1900650, -1073741824, 0, 1900651, -1073741824, 0, 1900652, -1073741824, 0, 1900653, -1073741824, 0, 1900654, -1073741824, 0, 1900655, -1073741824, 0, 1900656, -1073741824, 0, 1900657, -1073741824, 0, 1900658, -1073741824, 0, 1900659, -1073741824, 0, 1900660, -1073741824, 0, 1900661, -1073741824, 0, 1900662, -1073741824, 0, 1900663, -1073741824, 0, 1900664, -1073741824, 0, 1900665, -1073741824, 0, 1900666, -1073741824, 0, 1900667, -1073741824, 0, 1900668, -1073741824, 0, 1900669, -1073741824, 0, 1900670, -1073741824, 0, 1900671, -1073741824, 0, 1900672, -1073741824, 0, 1900673, -1073741824, 0, 1900674, -1073741824, 0, 1900675, -1073741824, 0, 1900676, -1073741824, 0, 1900677, -1073741824, 0, 1900678, -1073741824, 0, 1900679, -1073741824, 0, 1900680, -1073741824, 0, 1900681, -1073741824, 0, 1900682, -1073741824, 0, 1900683, -1073741824, 0, 1900684, -1073741824, 0, 1900800, -1073741824, 0, 1966204, -1073741824, 0, 1966205, -1073741824, 0, 1966336, -1073741824, 0, 2031740, -1073741824, 0, 2031872, -1073741824, 0, 2097276, -1073741824, 0, 2097408, -1073741824, 0, 2162812, -1073741824, 0, 2162944, -1073741824, 0, 2228348, -1073741824, 0, 2228480, -1073741824, 0, 2293884, -1073741824, 0, 2294016, -1073741824, 0, 2359420, -1073741824, 0, 2359552, -1073741824, 0, 2424956, -1073741824, 0, 2425087, -1073741824, 0, 2490492, -1073741824, 0, 2490623, -1073741824, 0, 2556028, -1073741824, 0, 2556158, -1073741824, 0, 2556159, -1073741824, 0, 2621564, -1073741824, 0, 2621693, -1073741824, 0, 2621694, -1073741824, 0, 2687101, -1073741824, 0, 2687228, -1073741824, 0, 2752637, -1073741824, 0, 2752762, -1073741824, 0, 2752763, -1073741824, 0, 2818173, -1073741824, 0, 2818297, -1073741824, 0, 2883709, -1073741824, 0, 2883831, -1073741824, 0, 2883832, -1073741824, 0, 2949245, -1073741824, 0, 2949366, -1073741824, 0, 2949367, -1073741824, 0, 3014781, -1073741824, 0, 3014901, -1073741824, 0, 3014902, -1073741824, 0, 3080317, -1073741824, 0, 3080435, -1073741824, 0, 3080436, -1073741824, 0, 3145853, -1073741824, 0, 3145969, -1073741824, 0, 3145970, -1073741824, 0, 3145971, -1073741824, 0, 3211389, -1073741824, 0, 3211504, -1073741824, 0, 3211505, -1073741824, 0, 3276925, -1073741824, 0, 3276926, -1073741824, 0, 3277038, -1073741824, 0, 3277039, -1073741824, 0, 3277040, -1073741824, 0, 3342462, -1073741824, 0, 3342463, -1073741824, 0, 3342464, -1073741824, 0, 3342465, -1073741824, 0, 3342466, -1073741824, 0, 3342467, -1073741824, 0, 3342572, -1073741824, 0, 3342573, -1073741824, 0, 3408004, -1073741824, 0, 3408005, -1073741824, 0, 3408006, -1073741824, 0, 3408007, -1073741824, 0, 3408106, -1073741824, 0, 3408107, -1073741824, 0, 3473544, -1073741824, 0, 3473545, -1073741824, 0, 3473546, -1073741824, 0, 3473547, -1073741824, 0, 3473548, -1073741824, 0, 3473549, -1073741824, 0, 3473550, -1073741824, 0, 3473638, -1073741824, 0, 3473639, -1073741824, 0, 3473640, -1073741824, 0, 3473641, -1073741824, 0, 3539087, -1073741824, 0, 3539088, -1073741824, 0, 3539089, -1073741824, 0, 3539090, -1073741824, 0, 3539091, -1073741824, 0, 3539092, -1073741824, 0, 3539093, -1073741824, 0, 3539094, -1073741824, 0, 3539095, -1073741824, 0, 3539096, -1073741824, 0, 3539097, -1073741824, 0, 3539098, -1073741824, 0, 3539099, -1073741824, 0, 3539100, -1073741824, 0, 3539101, -1073741824, 0, 3539102, -1073741824, 0, 3539103, -1073741824, 0, 3539104, -1073741824, 0, 3539105, -1073741824, 0, 3539106, -1073741824, 0, 3539107, -1073741824, 0, 3539108, -1073741824, 0, 3539109, -1073741824, 0, 3539110, -1073741824, 0, 3539111, -1073741824, 0, 3539112, -1073741824, 0, 3539113, -1073741824, 0, 3539114, -1073741824, 0, 3539115, -1073741824, 0, 3539116, -1073741824, 0, 3539117, -1073741824, 0, 3539118, -1073741824, 0, 3539119, -1073741824, 0, 3539120, -1073741824, 0, 3539121, -1073741824, 0, 3539122, -1073741824, 0, 3539123, -1073741824, 0, 3539124, -1073741824, 0, 3539125, -1073741824, 0, 3539126, -1073741824, 0, 3539127, -1073741824, 0, 3539128, -1073741824, 0, 3539129, -1073741824, 0, 3539130, -1073741824, 0, 3539131, -1073741824, 0, 3539132, -1073741824, 0, 3539133, -1073741824, 0, 3539134, -1073741824, 0, 3539135, -1073741824, 0, 3539136, -1073741824, 0, 3539137, -1073741824, 0, 3539138, -1073741824, 0, 3539139, -1073741824, 0, 3539140, -1073741824, 0, 3539141, -1073741824, 0, 3539142, -1073741824, 0, 3539143, -1073741824, 0, 3539144, -1073741824, 0, 3539145, -1073741824, 0, 3539146, -1073741824, 0, 3539147, -1073741824, 0, 3539148, -1073741824, 0, 3539149, -1073741824, 0, 3539150, -1073741824, 0, 3539151, -1073741824, 0, 3539152, -1073741824, 0, 3539153, -1073741824, 0, 3539154, -1073741824, 0, 3539155, -1073741824, 0, 3539156, -1073741824, 0, 3539157, -1073741824, 0, 3539158, -1073741824, 0, 3539159, -1073741824, 0, 3539160, -1073741824, 0, 3539161, -1073741824, 0, 3539162, -1073741824, 0, 3539163, -1073741824, 0, 3539164, -1073741824, 0, 3539165, -1073741824, 0, 3539166, -1073741824, 0, 3539167, -1073741824, 0, 3539168, -1073741824, 0, 3539169, -1073741824, 0, 3539170, -1073741824, 0, 3539171, -1073741824, 0, 3539172, -1073741824, 0, 3539173, -1073741824, 0 )

[node name="lavatile" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( 524322, 0, 0, 524323, 0, 0, 524324, 0, 0, 524325, 0, 0, 524326, 0, 0, 524327, 0, 0, 589857, 0, 0, 589858, 0, 0, 589859, 0, 0, 589860, 0, 0, 589861, 0, 0, 589862, 0, 0, 589863, 0, 0, 589864, 0, 0, 655392, 0, 0, 655393, 0, 0, 655394, 0, 0, 655395, 0, 0, 655396, 0, 0, 655397, 0, 0, 655398, 0, 0, 655399, 0, 0, 655400, 0, 0, 655401, 0, 0, 720927, 0, 0, 720928, 0, 0, 720929, 0, 0, 720930, 0, 0, 720931, 0, 0, 720932, 0, 0, 720933, 0, 0, 720934, 0, 0, 720935, 0, 0, 720936, 0, 0, 720937, 0, 0, 720938, 0, 0, 786462, 0, 0, 786463, 0, 0, 786464, 0, 0, 786465, 0, 0, 786466, 0, 0, 786467, 0, 0, 786468, 0, 0, 786469, 0, 0, 786470, 0, 0, 786471, 0, 0, 786472, 0, 0, 786473, 0, 0, 786474, 0, 0, 786475, 0, 0, 851999, 0, 0, 852000, 0, 0, 852001, 0, 0, 852002, 0, 0, 852003, 0, 0, 852004, 0, 0, 852005, 0, 0, 852006, 0, 0, 852007, 0, 0, 852008, 0, 0, 852009, 0, 0, 852010, 0, 0, 852011, 0, 0, 917537, 0, 0, 917538, 0, 0, 917539, 0, 0, 917540, 0, 0, 917541, 0, 0, 917542, 0, 0, 917543, 0, 0, 917544, 0, 0, 917545, 0, 0, 917546, 0, 0, 917547, 0, 0, 917548, 0, 0, 917549, 0, 0, 917550, 0, 0, 983074, 0, 0, 983075, 0, 0, 983076, 0, 0, 983077, 0, 0, 983078, 0, 0, 983079, 0, 0, 983080, 0, 0, 983081, 0, 0, 983082, 0, 0, 983083, 0, 0, 983084, 0, 0, 983085, 0, 0, 983086, 0, 0, 1048610, 0, 0, 1048611, 0, 0, 1048612, 0, 0, 1048613, 0, 0, 1048614, 0, 0, 1048615, 0, 0, 1048616, 0, 0, 1048617, 0, 0, 1048618, 0, 0, 1048619, 0, 0, 1048620, 0, 0, 1048621, 0, 0, 1048622, 0, 0, 1114148, 0, 0, 1114149, 0, 0, 1114157, 0, 0, 1114158, 0, 0, 1179694, 0, 0, 1245230, 0, 0, 1245231, 0, 0, 1310766, 0, 0, 1310767, 0, 0 )

[node name="speedtile" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
format = 1
tile_data = PoolIntArray( 458785, 0, 0, 458786, 0, 0, 458791, 0, 0, 458792, 0, 0, 524320, 0, 0, 524321, 0, 0, 524328, 0, 0, 524329, 0, 0, 589855, 0, 0, 589856, 0, 0, 589865, 0, 0, 589866, 0, 0, 655390, 0, 0, 655391, 0, 0, 655402, 0, 0, 655403, 0, 0, 720925, 0, 0, 720926, 0, 0, 720939, 0, 0, 720940, 0, 0, 786461, 0, 0, 786476, 0, 0, 786477, 0, 0, 786478, 0, 0, 786479, 0, 0, 852012, 0, 0, 852013, 0, 0, 852014, 0, 0, 852015, 0, 0, 917551, 0, 0, 983087, 0, 0, 1048623, 0, 0, 1114159, 0, 0, 1114183, 0, 0, 1114184, 0, 0, 1114185, 0, 0, 1114186, 0, 0, 1179695, 0, 0 )

[node name="reverse_G" type="Area2D" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
light_mask = 0
position = Vector2( 9669.75, 844.599 )
scale = Vector2( 3.02889, 3.27235 )
collision_layer = 8
collision_mask = 17
space_override = 1
gravity_point = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="reverse_G"]
position = Vector2( 112.843, 279.13 )
shape = SubResource( 3 )

[node name="reverse_G2" type="Area2D" parent="."]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
light_mask = 0
position = Vector2( 9682.44, 183.199 )
scale = Vector2( 3.04816, 2.522 )
collision_layer = 8
collision_mask = 17
space_override = 1
gravity_point = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="reverse_G2"]
position = Vector2( 112.843, 279.13 )
shape = SubResource( 3 )

[node name="RigidBody2D" type="RigidBody2D" parent="."]
position = Vector2( 3631.9, 1510.29 )
collision_layer = 9
collision_mask = 9
mass = 3061.22
can_sleep = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource( 4 )

[node name="RigidBody2D2" type="RigidBody2D" parent="."]
position = Vector2( 4140.9, 1459.9 )
collision_layer = 9
collision_mask = 9
mass = 30612.2
can_sleep = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D2"]
shape = SubResource( 4 )

[node name="RigidBody2D3" type="RigidBody2D" parent="."]
position = Vector2( 3329.52, 1036.56 )
collision_layer = 9
collision_mask = 9
mass = 306122.0
can_sleep = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D3"]
shape = SubResource( 4 )

[node name="RigidBody2D4" type="RigidBody2D" parent="."]
position = Vector2( 3989.71, 955.928 )
collision_layer = 9
collision_mask = 9
mass = 0.204082
can_sleep = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D4"]
shape = SubResource( 4 )

[node name="RigidBody2D5" type="RigidBody2D" parent="."]
position = Vector2( 3233.76, 1666.52 )
collision_layer = 9
collision_mask = 9
mass = 0.204082
can_sleep = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D5"]
shape = SubResource( 4 )

[node name="RigidBody2D6" type="RigidBody2D" parent="."]
position = Vector2( 3974.59, 1691.72 )
collision_layer = 9
collision_mask = 9
mass = 0.204082
can_sleep = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D6"]
shape = SubResource( 4 )

[node name="RigidBody2D7" type="RigidBody2D" parent="."]
position = Vector2( 3346.4, 1286.37 )
collision_layer = 9
collision_mask = 9
mass = 0.204082
can_sleep = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D7"]
shape = SubResource( 4 )

[node name="RigidBody2D8" type="RigidBody2D" parent="."]
position = Vector2( 3619.1, 1196.47 )
collision_layer = 9
collision_mask = 9
mass = 0.204082
can_sleep = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D8"]
shape = SubResource( 4 )

[node name="RigidBody2D9" type="RigidBody2D" parent="."]
position = Vector2( 3888.79, 1358.29 )
collision_layer = 9
collision_mask = 9
mass = 0.204082
can_sleep = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D9"]
shape = SubResource( 4 )

[node name="RigidBody2D10" type="RigidBody2D" parent="."]
position = Vector2( 3664.04, 932.768 )
collision_layer = 9
collision_mask = 9
mass = 0.204082
can_sleep = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D10"]
shape = SubResource( 4 )

[node name="RigidBody2D11" type="RigidBody2D" parent="."]
position = Vector2( 4287.34, 1106.57 )
collision_layer = 9
collision_mask = 9
mass = 300.0
can_sleep = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D11"]
shape = SubResource( 4 )

[node name="player" parent="." instance=ExtResource( 10 )]
position = Vector2( 118.794, 713.764 )

[connection signal="body_exited" from="portal" to="." method="_on_portal_body_exited"]
[connection signal="body_entered" from="reverse_G" to="." method="_on_reverse_G_body_entered"]
[connection signal="body_entered" from="reverse_G2" to="." method="_on_reverse_G2_body_entered"]
